Fixed margins on small layout

--- a/Group Project/zengarden/partials/_small.scss
+++ b/Group Project/zengarden/partials/_small.scss
@@ -35,6 +35,7 @@ header{
 
 .intro header, .intro .summary {
     text-align: center;
+    margin-right: 50px;
 
     p:first-of-type {
         z-index: 3;
@@ -45,6 +46,7 @@ header{
 
 #zen-preamble.preamble, .summary {
     z-index: 10;
+    margin-right: 50px;
     position: relative;
     padding-left: $padding-full !important;
     padding-right: $padding-full !important;
@@ -53,6 +55,7 @@ header{
 
 .main > div, .preamble, aside {
     margin: 2vw;
+    margin-right: 30px;
     padding: 0 $padding-mobile 20px $padding-mobile;
     // background-color: $background-article;
 
